--- a/style.css
+++ b/style.css
@@ -1,7 +1,78 @@
 table{
-    border: 1px solid black
+    border: 1px solid black;
+    width: 100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
+
 th, td{
     border: 1px solid black;
     text-align: left;
 }
+
+/*for image*/
+.image-container {
+    background-image: url("nature.jpg");
+    background-size: cover;
+    position: relative;
+    height: 520px;
+  }
+  /*for text inside image*/
+  .text {
+    background-color: white;
+    color: rgb(2, 2, 2);
+    font-size: 10vw; 
+    font-weight: bold;
+    margin: 0 auto;
+    padding: 10px;
+    width: 80%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    mix-blend-mode: screen;
+  }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: rgb(194, 184, 184);
+  }
+  
+  html {
+    box-sizing: border-box;
+  }
+  
+  .collapsible {
+    background-color: #222020;
+    color: rgb(247, 230, 230);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: #555;
+  }
+  
+  .content {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #e6dddd;
+  }
+
+  .footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 20px;
+  }
+  
